# plhm

./: AUTHORS  Makefile  Makefile.am  NEWS  README.markdown  a3load.hex  autogen.sh  configure.ac  dataTest.txt  datatest.txt  libertyd.c  libertyd_init.d  libertyd_launch.sh  mocap1.txt  mocap2.txt  plhm-1.0.pc.in  plhm.pc.in  readme  test.txt  tipsforPolhemus.txt
include/: Makefile.am  plhm.h
src/: Makefile  Makefile.am  OSC-client.h  libertyd.c  libplhm.c  plhm.c
test/: polhemus_test.pd
